# music-store-challenge

./: README.es.md  README.md  pyproject.toml
musicstore/: app.py  model.py  model.py.txt  view.py
tests/: test_model.py
